update making coamplifi gravity

--- a/google-gravity.html
+++ b/google-gravity.html
@@ -1,7 +1,6 @@
-<div>
+<div style="background-color: green">
   <!-- <script src="//cdn.webglstats.com/stat.js" defer async></script> -->
   <!-- <script src="/js/ga.js"></script> -->
-
   <style>
     @import url("style.css");
   </style>
