--- a/gravity.html
+++ b/gravity.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="m-0 p-0">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -8,11 +8,16 @@
     <title>Marbs Gravity Fall</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="layout.css" />
+    <link rel="stylesheet" href="coamplifi-style.css" />
   </head>
   <body>
     <object
       type="text/html"
+      data="coamplifi-gravity.html"
+      class="vw-full vh-full m-0"></object>
+    <!-- <object
+      type="text/html"
       data="google-gravity.html"
-      class="vw-full vh-full"></object>
+      class="vw-full vh-full"></object> -->
   </body>
 </html>
